[tool.poetry]
name = "topicmodeling"
version = "0.1.0"
description = "topic modeling tool"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gensim = "^4.3.2"
nltk = "^3.8.1"
matplotlib = "^3.8.0"
pandas


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
